--- a/indbydelse-tilmelding-2024.qmd
+++ b/indbydelse-tilmelding-2024.qmd
@@ -12,7 +12,7 @@ DataPraemiePengeAkt_T <- DataPraemiePenge_T %>% filter(grepl(InputEventAarAkt_V,
 DataResultSidst_T <- DataResult_T %>% filter(
   grepl(InputEventAarAkt_V, EventAarSidst_DW) &
   grepl("A-slutspil", DeltSlutspil_RD) &
-  grepl("[1-4]", Placering))
+  grepl("[1-4]", DeltPlacNr_RD))
 ```
 
 ---
@@ -272,7 +272,7 @@ if(nrow(DataResultSidst_T) == 0) {
         " i ", DataEventAarSidst_T$EventAarSted_RD, "</i>")) %>%
   kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
   row_spec(0, background = DataEventAarSidst_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
-	remove_column(c(1, 5:9))
+	remove_column(c(1, 5:11))
 }
 ```
 :::
