--- a/koncept.qmd
+++ b/koncept.qmd
@@ -186,12 +186,12 @@ kbl_webscraping_DM_resultater <- tbl_webscraping_DM_resultater %>%
   kbl(col.names = NA, align = "cl", escape = F,
       caption = paste(IkonPokal_V, "DM-vindere statistik")) %>%
   kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
-  row_spec(0, background = "#1C2833", color = "#FFFFFF") %>%
-  row_spec(which(tbl_webscraping_DM_resultater$År == "2020"),
-              strikeout = T, italic = T, color = "#5D6D7E") %>%
-  footnote(
-    "Webscraped fra BTDK's hjemmeside
-    <a href=https://bordtennisdanmark.dk/statistik/ping-pong-dm target=_blank><b>HER</b></a>",
+  row_spec(
+    which(tbl_webscraping_DM_resultater$År == "2020"),
+    strikeout = T, italic = T, color = "#5D6D7E") %>%
+  footnote(paste(
+    "Webscraped fra BTDK's hjemmeside,
+    <a href=https://bordtennisdanmark.dk/statistik/ping-pong-dm target=_blank><b>HER</b></a>"),
     general_title = "", escape = F)
 
 kbl_webscraping_DM_resultater
@@ -207,9 +207,9 @@ DataResultAlle_T %>%
   kbl(col.names = NA, align = "clcl", escape = F,
       caption = paste(IkonPokal_V, "DM-vindere statistik")) %>%
   kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
-  row_spec(0, background = "#1C2833", color = "#FFFFFF") %>%
-  row_spec(which(grepl("Aflyst", DataResultAlle_T$OrdreStatusSimpelKat_RD)),
-           strikeout = T, italic = T, color = "#5D6D7E") %>%
+  row_spec(
+    which(grepl("Aflyst", DataResultAlle_T$OrdreStatusSimpelKat_RD)),
+    strikeout = T, italic = T, color = "#5D6D7E") %>%
   remove_column(c(2, 5:11)) %>%
   footnote(
     "Webscraped fra BTDK's hjemmeside
