--- a/bi.qmd
+++ b/bi.qmd
@@ -359,7 +359,7 @@ if(nrow(DataKlubMangel_T) == 0) {
 		row_spec(which(grepl("Afbud", DataKlubMangel_T$OrdreStatusSimpelKat_RD)),
 						 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
 		column_spec(1, width_min = "2em") %>%
-		column_spec(1:5, extra_css = "border-top:0.7px solid #808080") %>%
+		column_spec(1:5, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
 		remove_column(6:7)
 }
 
@@ -400,7 +400,7 @@ if(nrow(DataDeltMangel_T) == 0) {
 	row_spec(which(grepl("Afbud", DataDeltMangel_T$OrdreStatusSimpelKat_RD)),
 					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
 	column_spec(1, width_min = "2em") %>%
-	column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
 	remove_column(5:6)
 }
 ```
