--- a/praemier-deltagere.qmd
+++ b/praemier-deltagere.qmd
@@ -115,7 +115,7 @@ if(nrow(DataPraemieYngstAeldstAkt_T) == 0) {
     kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
     row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
     column_spec(1, bold = T) %>%
-    column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+    column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
     footnote(paste(
       "Gaverne har til formål at hylde mangfoldigheden.<br>",
       DataBilletAkt_T$StatAlderForskelAntal_DW),
@@ -152,7 +152,7 @@ if(InputInfo1234_V %in% c(3)) {
         "</i>")) %>%
   kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
   row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
-	column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
   remove_column(4:8)
   }
 }
@@ -182,7 +182,7 @@ if(InputInfo1234_V %in% c(1, 2, 4)) {
   kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
   row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
   row_spec(which(DataDeltPuljerAkt_T$DeltSnakeSeedLagNr_DW == "1"), bold = T,
-           extra_css = "border-top:0.7px solid #808080") %>%
+           extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
   remove_column(5:10)
   }
 }
@@ -202,7 +202,7 @@ if(InputInfo1234_V %in% c(1, 2, 3, 4)) {
   row_spec(which(grepl("Afbud", DataDeltAndetAkt_T$OrdreStatusSimpelKat_RD)),
            strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
   row_spec(which(DataDeltAndetAkt_T$Nr. == "1"),
-           extra_css = "border-top:0.7px solid #808080") %>%
+           extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
   remove_column(4:5)
   }
 }
@@ -258,7 +258,7 @@ DataDeltKlubAkt_T %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltKlubAkt_T$OrdreStatusSimpelKat_RD)),
 					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
 	remove_column(5:6) %>%
 	scroll_box(height = "400px")
 ```
@@ -320,7 +320,7 @@ DataDeltByAkt_T %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltByAkt_T$OrdreStatusSimpelKat_RD)),
 					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
 	remove_column(5:6) %>%
 	scroll_box(height = "400px")
 ```
@@ -371,7 +371,7 @@ DataDeltAlderKatAkt_T %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltAlderKatAkt_T$OrdreStatusSimpelKat_RD)),
 					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
 	remove_column(5:6) %>%
 	scroll_box(height = "400px")
 ```
@@ -418,7 +418,7 @@ DataDeltKoenAkt_T %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltKoenAkt_T$OrdreStatusSimpelKat_RD)),
 					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
 	remove_column(5:6) %>%
 	scroll_box(height = "400px")
 ```
@@ -464,7 +464,7 @@ DataDeltGenTilAkt_T %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltGenTilAkt_T$OrdreStatusSimpelKat_RD)),
 					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
 	remove_column(5:6) %>%
 	scroll_box(height = "400px")
 ```
@@ -515,7 +515,7 @@ DataDeltOrdreKatAkt_T %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltOrdreKatAkt_T$OrdreStatusSimpelKat_RD)),
 					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
 	remove_column(5:6) %>%
 	scroll_box(height = "400px")
 ```
