--- a/wcpp.qmd
+++ b/wcpp.qmd
@@ -69,8 +69,8 @@ data.frame(
   kbl(col.names = NA, align = "lrr", escape = F,
       caption = paste(IkonPenge_V, "Præmiepenge til WCPP")) %>%
   kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
-  row_spec(1, bold = T, background = FarveBG_V, color = "#000000") %>%
-  column_spec(3, italic = T, color = FarveFG_V)
+  row_spec(1, bold = T, background = TabelFarveBG_V, color = "#000000") %>%
+  column_spec(3, italic = T, color = TabelFarveFG_V)
 
 data.frame(
   "År" = c(
