--- a/praemier-deltagere.qmd
+++ b/praemier-deltagere.qmd
@@ -1,8 +1,10 @@
 ```{r}
+#| label: kilde-fil
 source(file = "ping-pong-dm-input.R")
 ```
 
 ```{r}
+#| label: kilde-filter
 BilletDisciplinAkt_V  <- "Sandpapir"
 BilletRaekkeAkt_V     <- "Åben"
 BilletSpilFormatAkt_V <- "Single"
@@ -57,6 +59,7 @@ editor_options:
 ---
 
 ```{r}
+#| label: info-nedtaelling-plakat
 #| output: asis
 cat(knitr::raw_html(DataEventAarAkt_T$InfoNedtælling_DW))
 cat(DataEventAarAkt_T$InfoPlakatCTA_DW)
@@ -66,6 +69,7 @@ cat(DataEventAarAkt_T$InfoPlakatCTA_DW)
 ## Sideinfo
 
 ```{r}
+#| label: sideinfo
 #| output: asis
 cat(paste(IkonGentagelse_V, "Præmier og deltagere opdateres løbende for", DataEventAarAkt_T$EventAar_RD, "og er sidst opdateret", format(floor_date(Sys.time(), "30 minutes"), "%d.%m.%Y kl. %H:%M.")))
 ```
@@ -75,6 +79,7 @@ cat(paste(IkonGentagelse_V, "Præmier og deltagere opdateres løbende for", Data
 ## Tip
 
 ```{r}
+#| label: info-tip-indbydelse
 #| output: asis
 cat(DataEventAarAkt_T$InfoTipIndbydelse_DW)
 ```
@@ -83,7 +88,8 @@ cat(DataEventAarAkt_T$InfoTipIndbydelse_DW)
 ## `r paste(IkonPokal_V, "Præmier")`
 
 ```{r}
-#| layout="[[32, -2, 66]]"
+#| label: tbl-praemie-gave
+#| layout: [[32, -2, 66]]
 
 # Præmiepenge
 if(nrow(DataPraemiePengeAkt_T) == 0) {
@@ -127,6 +133,7 @@ if(nrow(DataPraemieYngstAeldstAkt_T) == 0) {
 ## `r paste(IkonPerson_V, "Deltagere")`
 
 ```{r}
+#| label: stat-tilmeldinger-billettype
 #| output: asis
 cat(paste0(
 "<b>Tilmeldinger billettype</b>^[<b>Tilmeldinger billettype</b>: Tilmeldinger billettype opgøres efter antal tilmeldinger til eventet fordelt på billettype.]",
@@ -134,6 +141,8 @@ cat(paste0(
 ```
 
 ```{r}
+#| label: tbl-delt
+
 # DataDeltForAkt_T
 if(InputInfo1234_V %in% c(3)) {
   if(nrow(DataDeltForAkt_T) == 0) {
@@ -212,17 +221,14 @@ if(InputInfo1234_V %in% c(1, 2, 3, 4)) {
 
 ::: {.grid style="text-align:center"}
 ::: {.g-col-12 .g-col-md-6}
+### Klubber
+
 ::: panel-tabset
 ## Graf
 
 ```{r}
-#| output: asis
-cat(paste0("<h5 style=font-weight:bold>Klubber</h5>"))
-```
-
-```{r}
+#| label: fig-klubber
 #| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpelKat_RD)) %>% summarise(length(unique(Klub_RD))))+1.5)/3.3
-
 DataAkt_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD)) %>%
 	filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpelKat_RD)) %>%
 	mutate(Klub_RD = paste0(Klub_RD, "&emsp;", KlubLogo_DW)) %>%
@@ -232,25 +238,13 @@ DataAkt_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD)) %>%
 						vjust = 0.4, hjust = 1, size = 5, color = "#FFFFFF", fontface = "bold") +
 	scale_fill_manual(values = levels(DataAkt_T$BilletKatFarve_DW)) +
   theme(axis.text.y = element_markdown(size = 15, face = "bold"))
-```
 
-```{r}
-#| output: asis
-cat(paste0(
-"<p style=font-size:70%>",
-"<b>Deltagere klubtype</b>^[<b>Deltagere klubtype</b>: Deltagere klubtype opgøres efter antal tilmeldte deltagere til eventet fordelt på <q>klub</q>, <q>ingen klub</q> og <q>udlandet</q>. Procentsatserne viser fordelingen heraf.]",
-"<br>", DataBilletAkt_T$StatDeltKlubKatAntal_DW,
-"</p>",
-
-"<p style=font-size:70%>",
-"<b>Forskellige klubber</b>^[<b>Forskellige klubber</b>: Forskellige klubber opgøres efter antal tilmeldte bordtennisklubber eksklusiv <q>ingen klub</q> og <q>udlandet</q> til eventet.]",
-"<br>", DataBilletAkt_T$StatKlubAntal_DW,
-"</p>"))
 ```
 
 ## Tabel
 
 ```{r}
+#| label: tbl-klubber
 DataDeltKlubAkt_T %>%
 	kbl(col.names = NA, align = "ccll", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter klubantal</i>") %>%
@@ -263,18 +257,31 @@ DataDeltKlubAkt_T %>%
 	scroll_box(height = "400px")
 ```
 :::
+
+```{r}
+#| label: stat-klubber
+#| output: asis
+cat(paste0(
+"<p style=font-size:70%>",
+"<b>Deltagere klubtype</b>^[<b>Deltagere klubtype</b>: Deltagere klubtype opgøres efter antal tilmeldte deltagere til eventet fordelt på <q>klub</q>, <q>ingen klub</q> og <q>udlandet</q>. Procentsatserne viser fordelingen heraf.]",
+"<br>", DataBilletAkt_T$StatDeltKlubKatAntal_DW,
+"</p>",
+
+"<p style=font-size:70%>",
+"<b>Forskellige klubber</b>^[<b>Forskellige klubber</b>: Forskellige klubber opgøres efter antal tilmeldte bordtennisklubber eksklusiv <q>ingen klub</q> og <q>udlandet</q> til eventet.]",
+"<br>", DataBilletAkt_T$StatKlubAntal_DW,
+"</p>"))
+```
 :::
 
 ::: {.g-col-12 .g-col-md-6}
+### Danmarkskort
+
 ::: panel-tabset
 ## Graf
 
 ```{r}
-#| output: asis
-cat(paste0("<h5 style=font-weight:bold>Danmarkskort</h5>"))
-```
-
-```{r}
+#| label: fig-danmarkskort
 #| fig-height: 5
 DataAkt_T %>%
   filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpelKat_RD) & !grepl("Ingen klub|Udlandet", Klub_RD)) %>%
@@ -296,7 +303,25 @@ DataAkt_T %>%
 		interactive  = F)
 ```
 
+## Tabel
+
 ```{r}
+#| label: tbl-danmarkskort
+DataDeltByAkt_T %>%
+	kbl(col.names = NA, align = "ccll", escape = F,
+			caption = "<i style=font-size:80%>Sorteret efter region og postnr.</i>") %>%
+	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed", font_size = "80%") %>%
+	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
+	row_spec(which(grepl("Afbud", DataDeltByAkt_T$OrdreStatusSimpelKat_RD)),
+					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
+	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
+	remove_column(5:6) %>%
+	scroll_box(height = "400px")
+```
+:::
+
+```{r}
+#| label: stat-danmarkskort
 #| output: asis
 cat(paste0(
 "<p style=font-size:70%>",
@@ -310,33 +335,16 @@ cat(paste0(
 "</p>"))
 ```
 
-## Tabel
-
-```{r}
-DataDeltByAkt_T %>%
-	kbl(col.names = NA, align = "ccll", escape = F,
-			caption = "<i style=font-size:80%>Sorteret efter region og postnr.</i>") %>%
-	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed", font_size = "80%") %>%
-	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
-	row_spec(which(grepl("Afbud", DataDeltByAkt_T$OrdreStatusSimpelKat_RD)),
-					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
-	remove_column(5:6) %>%
-	scroll_box(height = "400px")
-```
-:::
 :::
 
 ::: {.g-col-12 .g-col-md-6}
+### Aldersgrupper
+
 ::: panel-tabset
 ## Graf
 
 ```{r}
-#| output: asis
-cat(paste0("<h5 style=font-weight:bold>Aldersgrupper</h5>"))
-```
-
-```{r}
+#| label: fig-aldersgrupper
 #| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpelKat_RD)) %>% summarise(length(unique(DeltAlderKat_RD))))+1.5)/3.3
 DataAkt_T %>%
 	filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpelKat_RD)) %>%
@@ -347,7 +355,25 @@ DataAkt_T %>%
 	scale_fill_manual(values = levels(DataAkt_T$BilletKatFarve_DW))
 ```
 
+## Tabel
+
 ```{r}
+#| label: tbl-aldersgrupper
+DataDeltAlderKatAkt_T %>%
+	kbl(col.names = NA, align = "ccll", escape = F,
+			caption = "<i style=font-size:80%>Sorteret efter fødselsdato</i>") %>%
+	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed", font_size = "80%") %>%
+	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
+	row_spec(which(grepl("Afbud", DataDeltAlderKatAkt_T$OrdreStatusSimpelKat_RD)),
+					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
+	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
+	remove_column(5:6) %>%
+	scroll_box(height = "400px")
+```
+:::
+
+```{r}
+#| label: stat-aldersgrupper
 #| output: asis
 cat(paste0(
 "<p style=font-size:70%>",
@@ -361,35 +387,17 @@ cat(paste0(
 "</p>"))
 ```
 
-## Tabel
-
-```{r}
-DataDeltAlderKatAkt_T %>%
-	kbl(col.names = NA, align = "ccll", escape = F,
-			caption = "<i style=font-size:80%>Sorteret efter fødselsdato</i>") %>%
-	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed", font_size = "80%") %>%
-	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
-	row_spec(which(grepl("Afbud", DataDeltAlderKatAkt_T$OrdreStatusSimpelKat_RD)),
-					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
-	remove_column(5:6) %>%
-	scroll_box(height = "400px")
-```
-:::
 :::
 
 ::: {.g-col-12 .g-col-md-6}
+### Køn
+
 ::: panel-tabset
 ## Graf
 
 ```{r}
-#| output: asis
-cat(paste0("<h5 style=font-weight:bold>Køn</h5>"))
-```
-
-```{r}
+#| label: fig-koen
 #| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpelKat_RD)) %>% summarise(length(unique(DeltKoen_RD))))+1.5)/3.3
-
 DataAkt_T %>%
 	filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpelKat_RD)) %>%
 	ggplot(mapping = aes(y = fct_rev(fct_infreq(DeltKoen_RD)), fill = BilletKat_DW)) +
@@ -399,18 +407,10 @@ DataAkt_T %>%
 	scale_fill_manual(values = levels(DataAkt_T$BilletKatFarve_DW))
 ```
 
-```{r}
-#| output: asis
-cat(paste0(
-"<p style=font-size:70%>",
-"<b>Deltagere køn</b>^[<b>Deltagere køn</b>: Deltagere køn opgøres efter antal tilmeldte deltagere til eventet fordelt på herre og dame. Procentsatserne viser fordelingen heraf.]",
-"<br>", DataBilletAkt_T$StatDeltKoenAntal_DW,
-"</p>"))
-```
-
 ## Tabel
 
 ```{r}
+#| label: tbl-koen
 DataDeltKoenAkt_T %>%
 	kbl(col.names = NA, align = "ccll", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter køn</i>") %>%
@@ -423,18 +423,27 @@ DataDeltKoenAkt_T %>%
 	scroll_box(height = "400px")
 ```
 :::
+
+```{r}
+#| label: stat-koen
+#| output: asis
+cat(paste0(
+"<p style=font-size:70%>",
+"<b>Deltagere køn</b>^[<b>Deltagere køn</b>: Deltagere køn opgøres efter antal tilmeldte deltagere til eventet fordelt på herre og dame. Procentsatserne viser fordelingen heraf.]",
+"<br>", DataBilletAkt_T$StatDeltKoenAntal_DW,
+"</p>"))
+```
+
 :::
 
 ::: {.g-col-12 .g-col-md-6}
+### Gentilmeldinger
+
 ::: panel-tabset
 ## Graf
 
 ```{r}
-#| output: asis
-cat(paste0("<h5 style=font-weight:bold>Gentilmeldinger</h5>"))
-```
-
-```{r}
+#| label: fig-gentilmeldinger
 #| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpelKat_RD)) %>% summarise(length(unique(DeltGenKat_DW))))+1.5)/3.3
 DataAkt_T %>%
 	filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpelKat_RD)) %>%
@@ -445,18 +454,10 @@ DataAkt_T %>%
 	scale_fill_manual(values = levels(DataAkt_T$BilletKatFarve_DW))
 ```
 
-```{r}
-#| output: asis
-cat(paste0(
-"<p style=font-size:70%>",
-"<b>Deltagere gentilmelding</b>^[<b>Deltagere gentilmelding</b>: Deltagere gentilmelding opgøres efter antal tilmeldte deltagere til eventet fordelt på <q>gentilmelding</q> og <q>debutant</q>. Procentsatserne viser fordelingen heraf. Gentilmelding defineres som en, der tidligere har valgt samme billetype, og debutant defineres som en, der har valgt en billettype for første gang. Ved både gentilmelding og debutant tælles dette kun som gentilmelding. Opgørelsen gælder fra og med ", distinct(filter(DataAkt_T, EventAarFra2021_DW == DataEventAarAkt_T$EventAarFra2021_DW), min(EventAarStartDato_DW_Aar_DW)), ".]",
-"<br>", DataBilletAkt_T$StatDeltGenKatAntal_DW,
-"</p>"))
-```
-
 ## Tabel
 
 ```{r}
+#| label: tbl-gentilmeldinger
 DataDeltGenTilAkt_T %>%
 	kbl(col.names = NA, align = "ccll", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter antal gentilmeldinger</i>") %>%
@@ -469,18 +470,27 @@ DataDeltGenTilAkt_T %>%
 	scroll_box(height = "400px")
 ```
 :::
+
+```{r}
+#| label: stat-gentilmeldinger
+#| output: asis
+cat(paste0(
+"<p style=font-size:70%>",
+"<b>Deltagere gentilmelding</b>^[<b>Deltagere gentilmelding</b>: Deltagere gentilmelding opgøres efter antal tilmeldte deltagere til eventet fordelt på <q>gentilmelding</q> og <q>debutant</q>. Procentsatserne viser fordelingen heraf. Gentilmelding defineres som en, der tidligere har valgt samme billetype, og debutant defineres som en, der har valgt en billettype for første gang. Ved både gentilmelding og debutant tælles dette kun som gentilmelding. Opgørelsen gælder fra og med ", distinct(filter(DataAkt_T, EventAarFra2021_DW == DataEventAarAkt_T$EventAarFra2021_DW), min(EventAarStartDato_DW_Aar_DW)), ".]",
+"<br>", DataBilletAkt_T$StatDeltGenKatAntal_DW,
+"</p>"))
+```
+
 :::
 
 ::: {.g-col-12 .g-col-md-6}
+### Deltagere
+
 ::: panel-tabset
 ## Graf
 
 ```{r}
-#| output: asis
-cat(paste0("<h5 style=font-weight:bold>Deltagere</h5>"))
-```
-
-```{r}
+#| label: fig-deltagere
 #| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD)) %>% summarise(length(unique(OrdreKat_DW))))+1.5)/3.3
 DataAkt_T %>%
   filter(!is.na(DeltID_RD)) %>%
@@ -491,7 +501,25 @@ DataAkt_T %>%
   scale_fill_manual(values = levels(DataAkt_T$BilletKatFarve_DW))
 ```
 
+## Tabel
+
 ```{r}
+#| label: tbl-deltagere
+DataDeltOrdreKatAkt_T %>%
+	kbl(col.names = NA, align = "ccll", escape = F,
+			caption = "<i style=font-size:80%>Sorteret efter ældste <q>første ordredato</q></i>") %>%
+	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed", font_size = "80%") %>%
+	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
+	row_spec(which(grepl("Afbud", DataDeltOrdreKatAkt_T$OrdreStatusSimpelKat_RD)),
+					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
+	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
+	remove_column(5:6) %>%
+	scroll_box(height = "400px")
+```
+:::
+
+```{r}
+#| label: stat-deltagere
 #| output: asis
 cat(paste0(
 "<p style=font-size:70%>",
@@ -505,25 +533,11 @@ cat(paste0(
 "</p>"))
 ```
 
-## Tabel
-
-```{r}
-DataDeltOrdreKatAkt_T %>%
-	kbl(col.names = NA, align = "ccll", escape = F,
-			caption = "<i style=font-size:80%>Sorteret efter ældste <q>første ordredato</q></i>") %>%
-	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed", font_size = "80%") %>%
-	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
-	row_spec(which(grepl("Afbud", DataDeltOrdreKatAkt_T$OrdreStatusSimpelKat_RD)),
-					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
-	remove_column(5:6) %>%
-	scroll_box(height = "400px")
-```
-:::
 :::
 :::
 
 ```{r}
+#| label: tbl-result-sidst
 if(nrow(DataResultSidst_T) == 0) {
   data.frame() %>% kbl()
 } else {
